# C-_camera_yolo_service

./: .gitignore  CMakeLists.txt  README.md  test.sln  test.vcxproj
include/: byte_tracker.h  byte_tracker_lapjv.h  camera_manager.h  grpc_server.h  inference_engine.h  openh264_encoder.h  webrtc_service.h
include/generated_models/: detection.grpc.pb.cc  detection.grpc.pb.h  detection.pb.cc  detection.pb.h
include/models/: frame.h
models/: detection.proto
src/: byte_tracker.cpp  byte_tracker_lapjv.cpp  camera_manager.cpp  grpc_server.cpp  inference_engine.cpp  main.cpp  openh264_encoder.cpp  webrtc_service.cpp
